--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "@types/styled-components": "^5.1.34",
     "date-fns": "^3.6.0",
     "phosphor-icons": "^1.4.2",
