--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "phosphor-icons": "^1.4.2",
     "react": "^18.3.1",
